--- a/dioxide/pubspec.yaml
+++ b/dioxide/pubspec.yaml
@@ -1,11 +1,14 @@
 name: dioxide
 description: dioxide is a dio client generator.
-version: 1.0.0
+version: 0.1.0
 homepage: https://github.com/joutvhu/dioxide
 repository: https://github.com/joutvhu/dioxide/tree/main/dioxide
 
 environment:
   sdk: '>=2.14.0 <3.0.0'
+
+scripts:
+  publish: dart pub publish
 
 dependencies:
   dio: ^4.0.1
