--- a/dioxide_generator/pubspec.yaml
+++ b/dioxide_generator/pubspec.yaml
@@ -1,11 +1,14 @@
 name: dioxide_generator
 description: dioxide is a dio client generator.
-version: 1.0.0
+version: 0.1.1
 homepage: https://github.com/joutvhu/dioxide
 repository: https://github.com/joutvhu/dioxide/tree/main/dioxide_generator
 
 environment:
   sdk: '>=2.14.0 <3.0.0'
+
+scripts:
+  publish: dart pub publish
 
 dependencies:
   dio: ^4.0.1
@@ -13,8 +16,8 @@ dependencies:
   built_collection: ^5.0.0
   code_builder: ^4.0.0
   tuple: ^2.0.0
-  dioxide: 1.0.0
-  analyzer: ^4.0.0
+  dioxide: ^0.1.0
+  analyzer: ^3.0.0
   dart_style: ^2.0.1
   build: ^2.0.1
 
