--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dioxide
 description: dioxide is a dio client generator.
-version: 0.1.1+1
+version: 1.0.0
 homepage: https://github.com/joutvhu/dioxide
 repository: https://github.com/joutvhu/dioxide/tree/main/dioxide
 
@@ -11,8 +11,8 @@ scripts:
   publish: dart pub publish
 
 dependencies:
-  dio: ^4.0.1
-  meta: ^1.3.0
+  dio: ^4.0.0
+  meta: ^1.9.0
 
 dev_dependencies:
   lints: ">=1.0.0 <3.0.0"
