--- a/.github/workflows/publish_pub.yml
+++ b/.github/workflows/publish_pub.yml
@@ -26,11 +26,7 @@ jobs:
         uses: dart-lang/setup-dart@v1
 
       - name: Setup Credentials
-        uses: joutvhu/write-file@v1
-        with:
-          path: ~/.pub-cache/credentials.json
-          contents: ${{ secrets.PUB_CREDENTIALS }}
-          write_mode: overwrite
+        run: echo '${{ secrets.PUB_CREDENTIALS }}' > "$XDG_CONFIG_HOME/dart/pub-credentials.json"
 
       - name: Install dependencies for dioxide
         if: ${{ endsWith(steps.current_release.outputs.tag_name, '_dioxide') || !contains(steps.current_release.outputs.tag_name, '_') }}
