--- a/.github/workflows/publish_pub.yml
+++ b/.github/workflows/publish_pub.yml
@@ -26,32 +26,27 @@ jobs:
         uses: dart-lang/setup-dart@v1
 
       - name: Setup Credentials
-        run: echo '${{ secrets.PUB_CREDENTIALS }}' > "$XDG_CONFIG_HOME/dart/pub-credentials.json"
+        uses: joutvhu/write-file@v1
+        with:
+          path: ~/.config/dart/pub-credentials.json
+          contents: ${{ secrets.PUB_CREDENTIALS }}
+          write_mode: overwrite
 
       - name: Install dependencies for dioxide
         if: ${{ endsWith(steps.current_release.outputs.tag_name, '_dioxide') || !contains(steps.current_release.outputs.tag_name, '_') }}
         run: dart pub get
 
-      - name: Publish - dry run for dioxide
-        if: ${{ endsWith(steps.current_release.outputs.tag_name, '_dioxide') || !contains(steps.current_release.outputs.tag_name, '_') }}
-        run: dart pub publish --dry-run
-
       - name: Publish package for dioxide
         if: ${{ endsWith(steps.current_release.outputs.tag_name, '_dioxide') || !contains(steps.current_release.outputs.tag_name, '_') }}
         run: dart pub publish -f
-
-      - name: Install dependencies for generator
-        if: ${{ endsWith(steps.current_release.outputs.tag_name, '_generator') || !contains(steps.current_release.outputs.tag_name, '_') }}
-        run: dart pub get
-        working-directory: generator
 
       - name: Copy README file to generator
         if: ${{ endsWith(steps.current_release.outputs.tag_name, '_generator') || !contains(steps.current_release.outputs.tag_name, '_') }}
         run: cp -r ./README.md ./generator/
 
-      - name: Publish - dry run for generator
+      - name: Install dependencies for generator
         if: ${{ endsWith(steps.current_release.outputs.tag_name, '_generator') || !contains(steps.current_release.outputs.tag_name, '_') }}
-        run: dart pub publish --dry-run
+        run: dart pub get
         working-directory: generator
 
       - name: Publish package for generator
