--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,10 +5,11 @@ homepage: https://github.com/joutvhu/dioxide
 repository: https://github.com/joutvhu/dioxide/tree/main/dioxide
 
 environment:
-  sdk: '>=2.17.0  <4.0.0'
+  sdk: '>=2.17.0 <4.0.0'
 
 scripts:
   publish: dart pub publish
+  publish-dry: dart pub publish --dry-run
 
 dependencies:
   dio: ^5.0.0
