--- a/generator/pubspec.yaml
+++ b/generator/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dioxide_generator
 description: dioxide is a dio client generator.
-version: 1.0.0+2
+version: 1.0.1
 homepage: https://github.com/joutvhu/dioxide
 repository: https://github.com/joutvhu/dioxide/tree/main/dioxide_generator
 
@@ -11,24 +11,24 @@ topics:
   - build-runner
 
 environment:
-  sdk: '>=2.17.0 <4.0.0'
+  sdk: '>=3.6.0 <4.0.0'
 
 scripts:
   publish: dart pub publish
   publish-dry: dart pub publish --dry-run
 
 dependencies:
-  dio: ^5.0.0
-  source_gen: ^1.3.0
+  analyzer: '>=4.9.0 <8.0.0'
+  build: ^2.4.1
   built_collection: ^5.1.1
-  code_builder: ^4.4.0
+  code_builder: ^4.10.0
+  dart_style: '>=2.3.7 <4.0.0'
+  dio: ^5.0.0
+  dioxide: ^1.0.1
+  source_gen: '>=1.5.0 <3.0.0'
   tuple: ^2.0.1
-  dioxide: ^1.0.0
-  analyzer: ">=4.6.0 <7.0.0"
-  dart_style: ^2.3.0
-  build: ^2.3.1
 
 dev_dependencies:
-  lints: ">=1.0.0 <3.0.0"
+  lints: ^4.0.0
   test: ^1.24.0
   source_gen_test: ^1.0.5
