--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: dioxide
 description: dioxide is a dio client generator.
-version: 1.0.0+1
+version: 1.0.1
 homepage: https://github.com/joutvhu/dioxide
 repository: https://github.com/joutvhu/dioxide/tree/main/dioxide
 
 environment:
-  sdk: '>=2.17.0 <4.0.0'
+  sdk: '>=2.19.0 <4.0.0'
 
 scripts:
   publish: dart pub publish
@@ -16,4 +16,4 @@ dependencies:
   meta: ^1.9.0
 
 dev_dependencies:
-  lints: ">=1.0.0 <3.0.0"
+  lints: ^4.0.0
